--- a/.editorconfig
+++ b/.editorconfig
@@ -1,5 +1,12 @@
 root = true
 
+[*]
+tab_width = 4
+
+[*.{props,targets,xml,Config}]
+indent_style = space
+indent_size = 2
+
 # C# files
 [*.cs]
 
@@ -8,7 +15,6 @@ root = true
 # Indentation and spacing
 indent_size = 4
 indent_style = space
-tab_width = 4
 
 # New line preferences
 insert_final_newline = true
