--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,6 +12,6 @@ build:
   project: ReferenceAssemblyAnnotator.sln
   verbosity: minimal
 test_script:
-- .\test.ps1 -Clean
+- ps: .\test.ps1 -Clean
 artifacts:
 - path: 'TunnelVisionLabs.ReferenceAssemblyAnnotator\**\*.nupkg'
