--- a/tests/NuGet.Config
+++ b/tests/NuGet.Config
@@ -4,6 +4,6 @@
     <add key="globalPackagesFolder" value=".isolatednugetcache" />
   </config>
   <packageSources>
-    <add key="Debug output" value="..\TunnelVisionLabs.ReferenceAssemblyAnnotator\bin\Debug" />
+    <add key="Local build" value="..\TunnelVisionLabs.ReferenceAssemblyAnnotator\bin\%CONFIGURATION%" />
   </packageSources>
 </configuration>
